# CSpectra-cluster

./: .gitignore  CMakeLists.txt  ComparisonMatch.cpp  ComparisonMatch.h  ConsensusSpectrum.cpp  ConsensusSpectrum.h  ConsensusSpectrumBuilderFactory.h  ConsensusSpectrumFactory.cpp  ConsensusSpectrumFactory.h  Defaults.cpp  Defaults.h  Functions.cpp  Functions.h  ICluster.h  IConsensusSpectrumBuilder.h  IPeak.h  IPointer.cpp  IPointer.h  IQualityScorer.h  ISpectrum.h  ISpectrumHolder.h  ISpectrumQuality.h  KnownProperties.cpp  KnownProperties.h  ParserUtilities.cpp  ParserUtilities.h  Peak.cpp  Peak.h  Properties.cpp  Properties.h  README.md  SignalToNoiseChecker.cpp  SignalToNoiseChecker.h  SpectralClusrer.cpp  SpectralClusrer.h  Spectrum.cpp  Spectrum.h  main.cpp  small.mgf  test.mgf
Cluster/: GreedySpectralCluster.cpp  GreedySpectralCluster.h  ICluster.h  ISpectrumHolder.h  SpectralClusrer.cpp  SpectralClusrer.h  SpectrumHolderListener.h
Consensus/: ConsensusSpectrum.cpp  ConsensusSpectrum.h  ConsensusSpectrumBuilderFactory.h  ConsensusSpectrumFactory.cpp  ConsensusSpectrumFactory.h  GreedyConsensusSpectrum.cpp  GreedyConsensusSpectrum.h  GreedyConsensusSpectrumFactory.cpp  GreedyConsensusSpectrumFactory.h  IConsensusSpectrumBuilder.h
Property/: Properties.cpp  Properties.h
Spectrum/: IPeak.h  ISpectrum.h  ISpectrumQuality.h  KnownProperties.cpp  KnownProperties.h  Mass.cpp  Mass.h  Peak.cpp  Peak.h  Spectrum.cpp  Spectrum.h
cdf/: CumulativeDistributionFunction.cpp  CumulativeDistributionFunction.h  CumulativeDistributionFunctionFactory.cpp  CumulativeDistributionFunctionFactory.h
engine/: GreedyIncrementalClusteringEngine.cpp  GreedyIncrementalClusteringEngine.h  IClusteringEngine.h  IIncrementalClusteringEngine.h  IncrementalClusteringEngine.cpp  IncrementalClusteringEngine.h  IncrementalClusteringEngineFactory.h
pool/: ClusterPointerPool.h  PointerPool.cpp  PointerPool.h  PoolFactory.cpp  PoolFactory.h
quality/: IQualityScorer.h  SignalToNoiseChecker.cpp  SignalToNoiseChecker.h
similarity/: CombinedFisherIntensityTest.cpp  CombinedFisherIntensityTest.h  FisherExactTest.cpp  FisherExactTest.h  FrankEtAlDotProduct.cpp  FrankEtAlDotProduct.h  HypergeometricScore.cpp  HypergeometricScore.h  IPeakMatches.h  ISimilarityChecker.h  IntensityRankCorrelation.cpp  IntensityRankCorrelation.h  KendallCorrelation.cpp  KendallCorrelation.h  PeakMatches.cpp  PeakMatches.h  PeakMatchesUtilities.cpp  PeakMatchesUtilities.h
util/: ClusterUtilities.cpp  ClusterUtilities.h  ComparisonMatch.cpp  ComparisonMatch.h  Defaults.cpp  Defaults.h  IOUtilities.cpp  IOUtilities.h  MZIntensityUtilities.cpp  MZIntensityUtilities.h  ParserUtilities.cpp  ParserUtilities.h
util/Function/peak/: BinnedHighestNPeakFunction.cpp  BinnedHighestNPeakFunction.h  FractionTICPeakFunction.cpp  FractionTICPeakFunction.h  HighestNPeakFunction.cpp  HighestNPeakFunction.h  PeakFunction.h
util/Function/spectrum/: RemoveImpossiblyHighPeaksFunction.cpp  RemoveImpossiblyHighPeaksFunction.h  RemovePrecursorPeaksFunction.cpp  RemovePrecursorPeaksFunction.h  SpectrumFunctoin.h
util/Predicate/cluster_comparison/: ClusterPredicate.h  ClusterShareMajorPeakPredicate.cpp  ClusterShareMajorPeakPredicate.h  IsKnownComparisonsPredicate.cpp  IsKnownComparisonsPredicate.h
util/Predicate/spectrum_comparison/: ShareMajorPeaksPredicate.cpp  ShareMajorPeaksPredicate.h  SpectrumPredicate.h
